--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html>
   <head>
-    <title>页面 1</title>
+    <title>萌萌哒的油条的主页</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
     <link href="resources/css/axure_rp_page.css" type="text/css" rel="stylesheet"/>
@@ -11,7 +11,7 @@
 @font-face {
 </style>
 <script>
-document.oncontextmenu = function (event){
+document。oncontextmenu = function (event){
     if(window.event){
         event = window.event;
     }try{
