--- a/页面_2.html
+++ b/页面_2.html
@@ -212,7 +212,7 @@ document.oncontextmenu = function (event){
       <div id="u77" class="ax_default _一级标题">
         <div id="u77_div" class=""></div>
         <div id="u77_text" class="text ">
-          <p><span>这里是萌萌哒的油条~</span></p>
+          <p><span>这里是萌萌哒的油条</span></p>
         </div>
       </div>
 
